--- a/03_kolmastund.html
+++ b/03_kolmastund.html
@@ -1,9 +1,19 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
+		<title>Lehe pealkiri</title>
+		
+		<!-- fontawesome koodid tulevad siit -->
+		
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+
+
+		
 	</head>
 	
 	<body>
+	
+	<i class="fas fa-address-book"></i>
 		
 	<b>Rõhutame teksti</b><br>
 	<strong>Toome esile</strong><br>
@@ -15,6 +25,9 @@
 For 50 years, WWF has been protecting the future of nature. The world's leading conservation organization, WWF works in 100 countries and is supported by 1.2 million members in the United States and close to 5 million globally.
 </blockquote>
 
+			<!-- awesome ikoonide kasutamine-->
+
+			
 
 
 
